--- a/src/normalize.css
+++ b/src/normalize.css
@@ -6,6 +6,8 @@
   list-style: none;
   text-decoration: none;
   outline: none;
+  border: none;
+  outline: none;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
