work toggle tabs

--- a/src/Components/YourFurniActivity/YourFurniActivity.module.scss
+++ b/src/Components/YourFurniActivity/YourFurniActivity.module.scss
@@ -1,4 +1,7 @@
 .sectionYourFurniActivity {
+    width: 595px;
+    max-width: 100%;
+
     &__title {
         margin-top: 17px;
         font-family: 'FuturaPT';
