--- a/src/assets/styles/tabsYourFurniActivity.module.scss
+++ b/src/assets/styles/tabsYourFurniActivity.module.scss
@@ -17,4 +17,13 @@
         background-color: transparent;
         border-radius: 3px;
     }
+
+    &__subTitle {
+        max-width: 595px;
+        font-family: 'FuturaPT';
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 23px;
+        color: #E0E0E0;
+    }
 }
