--- a/src/Components/Container/Container.module.scss
+++ b/src/Components/Container/Container.module.scss
@@ -10,5 +10,9 @@
     &>div {
         overflow-x: auto;
 
+        &::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        }
     }
 }
