--- a/src/Components/DefaultPage/DefaultPage.module.scss
+++ b/src/Components/DefaultPage/DefaultPage.module.scss
@@ -73,6 +73,7 @@
         border: 2px dashed #ED5365;
         border-right: none;
         border-radius: 12px 0 0 12px;
+        color: #fff;
     }
 
     &__arrow {
