--- a/src/Components/YourFurniActivity/YourFurniActivity.module.scss
+++ b/src/Components/YourFurniActivity/YourFurniActivity.module.scss
@@ -4,13 +4,37 @@
         margin-top: 170px;
     }
 
-    &__title {
-        margin-top: 17px;
+    &__titles {
+        display: grid;
+        grid-template-areas:
+            "subTitle subTitle money"
+            "title title money"
+    }
+
+    &__title,
+    &__subTitle {
         font-family: 'FuturaPT';
+        color: #F0F0F0;
+    }
+
+    &__title {
+        grid-area: title;
         font-weight: 700;
         font-size: 46px;
         line-height: 49px;
-        color: #F0F0F0;
+    }
+
+    &__subTitle {
+        grid-area: subTitle;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+    }
+
+    &__imgMoney {
+        display: grid;
+        justify-self: end;
+        grid-area: money;
     }
 
     &__content {
