--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -19,3 +19,26 @@
         cursor: pointer;
     }
 }
+
+.borderForCode {
+    border: 2px dashed #A4A4A9;
+}
+
+.bgColorArrow {
+    background-color: #A4A4A9;
+}
+
+.marginTop {
+    margin-top: 0 !important;
+}
+
+.sizeCode {
+    font-size: 12px;
+    line-height: 126%;
+    letter-spacing: 0.08em;
+    color: #E0E0E0;
+}
+
+.alignItems {
+    align-items: start;
+}
