--- a/src/assets/styles/tabsYourFurniActivityItem.module.scss
+++ b/src/assets/styles/tabsYourFurniActivityItem.module.scss
@@ -113,6 +113,7 @@
 
 .tabsYourFurniActivityItem.detalContent {
     background-color: #323540;
+    padding-left: 56px;
 
     &:first-of-type,
     &:last-of-type {
