realise event_type color

--- a/src/assets/styles/tabsYourFurniActivityItem.module.scss
+++ b/src/assets/styles/tabsYourFurniActivityItem.module.scss
@@ -126,3 +126,30 @@
 .tabsYourFurniActivityItem.active {
     background-color: #323540;
 }
+
+
+.referral {
+    color: #E7E960;
+}
+
+.closed_won {
+    color: #22D3A5;
+}
+
+.closed_lost {
+    color: #F94C4C;
+}
+
+.waitkeys {
+    color: #B3BAFF;
+}
+
+.willmeet {
+    color: #F5A50A;
+}
+
+.sentofferr,
+.waitprepay,
+.recelc {
+    color: #ff3ae8;
+}
