--- a/src/Components/DefaultPage/DefaultPage.module.scss
+++ b/src/Components/DefaultPage/DefaultPage.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 600px;
     padding: 32px 20px;
     border: 2px solid #323540;
     border-radius: 12px;
@@ -35,6 +34,7 @@
         margin-top: 40px;
         font-family: 'FuturaPT';
         font-weight: 400;
+        max-width: 100%;
         font-size: 14px;
         line-height: 148%;
         text-align: center;
