--- a/src/Components/SocialMedia/SocialMedia.module.scss
+++ b/src/Components/SocialMedia/SocialMedia.module.scss
@@ -12,14 +12,47 @@
     box-shadow: 0 8px 40px rgba(0, 0, 0, 0.64);
     border-radius: 16px;
 
+    @media (max-width: 700px) {
+        right: 10px;
+    }
+
+    @media (max-width: 375px) {
+        position: fixed;
+        top: initial;
+        width: initial;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        border-radius: 16px 16px 0 0;
+        padding-bottom: 44px;
+    }
+
+    &__title {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 23px;
+        color: #FFF;
+    }
+
     &__item {
         &:first-child {
+            display: none;
+            margin-bottom: 17px;
+
+            @media (max-width: 375px) {
+                display: flex;
+            }
+        }
+
+        &:nth-child(2) {
             display: flex;
             align-items: center;
         }
 
-        &:not(:first-child) {
-            margin-top: 11px;
+        &:not(:first-child, :nth-child(2)) {
+            margin-top: 20px;
         }
     }
 
