--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -9,6 +9,7 @@
     padding: 0 40px;
     height: 56px;
     background-color: #262830;
+    z-index: 1;
 
     @media (max-width: 700px) {
         padding: 0 20px;
