--- a/src/Components/Body/Body.module.scss
+++ b/src/Components/Body/Body.module.scss
@@ -3,3 +3,10 @@
     align-items: center;
     margin-top: 201px;
 }
+
+.preloaderWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
