work copy code desctop and mobile

--- a/src/Components/DefaultPage/DefaultPage.module.scss
+++ b/src/Components/DefaultPage/DefaultPage.module.scss
@@ -49,6 +49,10 @@
     &__mail {
         border-bottom: solid 1px #8B8B9E;
     }
+
+    &__copyCode {
+        cursor: pointer;
+    }
 }
 
 .borderForCode {
