--- a/src/Components/FormUserLogin/FormUserLogin.module.scss
+++ b/src/Components/FormUserLogin/FormUserLogin.module.scss
@@ -29,7 +29,7 @@
         align-items: center;
         justify-content: center;
         margin: 40px auto 0;
-        width: 97px;
+        padding: 18px 32px;
         height: 56px;
         background-color: #ED5365;
         color: #fff;
