--- a/src/Components/MainPage/MainPage.module.scss
+++ b/src/Components/MainPage/MainPage.module.scss
@@ -1,14 +1,25 @@
 .listDescriptionWorksFurni {
     display: grid;
-    grid-template-columns: repeat(2, minmax(488px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     gap: 40px;
+
+    @media (max-width: 920px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    @media (max-width: 480px) {
+        gap: 24px;
+    }
 
     &__item {
         padding: 48px 40px;
-        height: 486px;
         background-color: #262830;
         border: 2px solid #323540;
         border-radius: 24px;
+
+        @media (max-width: 480px) {
+            padding: 32px 16px;
+        }
     }
 
     &__title {
@@ -18,6 +29,44 @@
         font-size: 40px;
         line-height: 43px;
         color: #F0F0F0;
+
+        @media (max-width: 480px) {
+            font-size: 32px;
+            line-height: 36px;
+        }
+
+        @media (max-width: 365px) {
+            font-size: 25px;
+            line-height: 29px;
+        }
+    }
+
+    &__title.howItworks {
+        font-family: 'FuturaPT';
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 35px;
+        color: #F0F0F0;
+
+        @media (max-width: 480px) {
+            font-size: 20px;
+            line-height: 23px;
+        }
+    }
+
+    &__subTitle {
+        margin-top: 24px;
+        font-family: 'FuturaPT';
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 23px;
+        color: #E0E0E0;
+
+        @media (max-width: 480px) {
+            margin-top: 24px;
+            font-size: 16px;
+            line-height: 20px;
+        }
     }
 }
 
@@ -25,6 +74,11 @@
     display: grid;
     margin-top: 23px;
     gap: 27px;
+
+    @media (max-width: 480px) {
+        gap: 22px;
+        margin-top: 18px;
+    }
 
     &__item {
         display: flex;
@@ -35,6 +89,11 @@
         margin-right: 17px;
         width: 30px;
         height: 30px;
+
+        @media (max-width: 480px) {
+            width: 22px;
+            height: 22px;
+        }
     }
 
     &__text {
@@ -43,6 +102,11 @@
         font-size: 20px;
         line-height: 23px;
         color: #E0E0E0;
+
+        @media (max-width: 480px) {
+            font-size: 16px;
+            line-height: 20px;
+        }
     }
 }
 
@@ -51,6 +115,9 @@
     margin-top: 36px;
     gap: 20px;
 
+    @media (max-width: 480px) {
+        margin-top: 24px;
+    }
 
     &__link {
         display: flex;
@@ -64,7 +131,7 @@
         font-size: 14px;
         line-height: 17px;
         color: #FFFFFF;
-        
+
         &:first-child {
             background-color: #ED5365;
             width: 113px;
@@ -74,6 +141,43 @@
             width: 100px;
             background-color: transparent;
             border: 2px solid #FFFFFF;
+        }
+    }
+}
+
+.listDescriptionProgram {
+    display: grid;
+    margin-top: 8px;
+    gap: 8px;
+
+    &__item {
+        position: relative;
+        font-family: 'FuturaPT';
+        padding-left: 14px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: #E0E0E0;
+
+        &::before {
+            content: '';
+            display: inline-block;
+            position: absolute;
+            left: 0;
+            width: 6px;
+            height: 6px;
+            margin-top: 8px;
+            background-color: #ED5365;
+            border-radius: 50%;
+            margin-right: 6px;
+        }
+
+        .email {
+            border-bottom: solid 1px;
+        }
+
+        a {
+            color: #E0E0E0;
         }
     }
 }
