--- a/src/Components/Body/Body.module.scss
+++ b/src/Components/Body/Body.module.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 201px;
+    justify-content: center;
+    height: 100%;
 }
 
 .preloaderWrapper {
