--- a/src/Components/TabsItem/TabsListItem.module.scss
+++ b/src/Components/TabsItem/TabsListItem.module.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    width: 64px;
+    padding: 8px 17px;
     border-radius: 16px;
     font-family: 'FuturaPT';
     font-weight: 500;
