--- a/src/Components/YourFurniActivity/YourFurniActivity.module.scss
+++ b/src/Components/YourFurniActivity/YourFurniActivity.module.scss
@@ -53,7 +53,9 @@
     }
 
     &__content {
+        text-align: center;
         margin-top: 30px;
+        height: 580px;
     }
 
     &__codeCopied {
