edit mobile layout

--- a/src/Components/Body/Body.module.scss
+++ b/src/Components/Body/Body.module.scss
@@ -6,6 +6,10 @@
     height: 100%;
 }
 
+.mainPageHeight {
+    height: initial;
+}
+
 .preloaderWrapper {
     display: flex;
     align-items: center;
