--- a/src/Components/Body/Body.module.scss
+++ b/src/Components/Body/Body.module.scss
@@ -3,11 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-}
-
-.mainPageHeight {
-    height: initial;
+    min-height: 100%;
 }
 
 .preloaderWrapper {
