--- a/src/Components/FilterContacts/FilterContacts.module.scss
+++ b/src/Components/FilterContacts/FilterContacts.module.scss
@@ -2,7 +2,7 @@
     padding: 8px 20px;
     position: absolute;
     z-index: 1;
-    top: 52px;
+    top: 0;
     left: 0;
     right: 0;
     background-color: #323540;
