work currect referal code

--- a/src/Components/DefaultPage/DefaultPage.module.scss
+++ b/src/Components/DefaultPage/DefaultPage.module.scss
@@ -56,10 +56,10 @@
 }
 
 .borderForCode {
-    border: 2px dashed #ED5365;
+    border: 2px dashed #CE1A30;
 }
 
 .bgColorArrow {
-    background-color: #ED5365;
-    border: 2px solid #ED5365;
+    background-color: #CE1A30;
+    border: 2px solid #CE1A30;
 }
