--- a/src/Components/FormUserLogin/FormUserLogin.module.scss
+++ b/src/Components/FormUserLogin/FormUserLogin.module.scss
@@ -31,7 +31,7 @@
         margin: 40px auto 0;
         padding: 18px 32px;
         height: 56px;
-        background-color: #ED5365;
+        background-color: #CE1A30;
         color: #fff;
         border-radius: 88px;
         transition: background-color .2s ease;
