--- a/src/Components/Tabs/TabsList.module.scss
+++ b/src/Components/Tabs/TabsList.module.scss
@@ -2,6 +2,7 @@
     display: inline-flex;
     margin-top: 34px;
     height: 32px;
-    background: #262830;
+    border: 1px solid #323540;
+    background-color: #262830;
     border-radius: 32px;
 }
