--- a/src/Components/MainPage/MainPage.module.scss
+++ b/src/Components/MainPage/MainPage.module.scss
@@ -135,7 +135,7 @@
 
 
         &:first-child {
-            background-color: #ED5365;
+            background-color: #CE1A30;
             width: 113px;
 
             &:hover {
@@ -178,7 +178,7 @@
             width: 6px;
             height: 6px;
             margin-top: 8px;
-            background-color: #ED5365;
+            background-color: #CE1A30;
             border-radius: 50%;
             margin-right: 6px;
         }
