--- a/src/Components/TimeUnits/TimeUnits.module.scss
+++ b/src/Components/TimeUnits/TimeUnits.module.scss
@@ -1,7 +1,32 @@
 .sectionTimeUnits {
-    display: flex;
+    display: grid;
+    grid-template-areas:
+        "calendar title openTimeUnits";
+    grid-template-columns: 29px auto auto;
+    align-items: center;
+    padding: 0 21px;
     height: 52px;
     background-color: #262830;
     border: 2px solid #323540;
     border-radius: 16px;
+
+    &__iconCalendar {
+        grid-area: calendar;
+    }
+
+    &__title {
+        text-align: left;
+        font-family: 'FuturaPT';
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+        color: #fff;
+        grid-area: title;
+    }
+
+    &__iconOpenTimeUnits {
+        justify-self: end;
+        grid-area: openTimeUnits;
+        cursor: pointer;
+    }
 }
