refresh WIP process

--- a/src/Components/FormUserLogin/FormUserLogin.module.scss
+++ b/src/Components/FormUserLogin/FormUserLogin.module.scss
@@ -38,7 +38,7 @@
         cursor: pointer;
 
         &:hover {
-            background-color: #8243F0;
+            background-color: #541ACE;
         }
     }
 
