--- a/src/Components/MainPage/MainPage.module.scss
+++ b/src/Components/MainPage/MainPage.module.scss
@@ -139,18 +139,18 @@
             width: 113px;
 
             &:hover {
-                background-color: #8243F0;
+                background-color: #541ACE;
             }
         }
 
         &:last-child {
             width: 100px;
-            background-color: transparent;
-            border: 2px solid #FFFFFF;
+            background-color: #CE1A30;
+            border: 2px solid #CE1A30;
 
             &:hover {
-                background-color: #8243F0;
-                border: solid 2px #8243F0;
+                background-color: #541ACE;
+                border: solid 2px #541ACE;
             }
         }
     }
