--- a/src/Components/FormUserLogin/FormUserLogin.module.scss
+++ b/src/Components/FormUserLogin/FormUserLogin.module.scss
@@ -113,3 +113,10 @@
         margin-top: 37px;
     }
 }
+
+.backIcon {
+    position: absolute;
+    top: 14px;
+    left: 42px;
+    cursor: pointer;
+}
