--- a/src/Components/Input/Input.module.scss
+++ b/src/Components/Input/Input.module.scss
@@ -18,6 +18,14 @@
         font-size: 14px;
         color: #8B8B9E;
     }
+
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        -moz-appearance: textfield;
+        background: #0a377e;
+        margin: 0;
+    }
 }
 
 .error {
