--- a/src/Components/MainPage/MainPage.module.scss
+++ b/src/Components/MainPage/MainPage.module.scss
@@ -145,8 +145,8 @@
 
         &:last-child {
             width: 100px;
-            background-color: #CE1A30;
-            border: 2px solid #CE1A30;
+            background-color: transparent;
+            border: 2px solid #FFFFFF;
 
             &:hover {
                 background-color: #541ACE;
