--- a/src/Components/FormUserLogin/FormUserLogin.module.scss
+++ b/src/Components/FormUserLogin/FormUserLogin.module.scss
@@ -83,13 +83,14 @@
         position: absolute;
         top: -150px;
         display: inline-block;
+        max-width: 221px;
         padding: 9px 20px;
         background-color: #C40F24;
         border-radius: 12px;
         font-family: 'FuturaPT';
         font-weight: 400;
         font-size: 12px;
-        line-height: 15px;
+        line-height: 16px;
         color: #fff;
     }
 
