--- a/src/assets/styles/tabsYourFurniActivityItem.module.scss
+++ b/src/assets/styles/tabsYourFurniActivityItem.module.scss
@@ -28,7 +28,7 @@
         background-color: #323540;
     }
 
-    
+
 
     &:last-of-type {
         position: sticky;
@@ -172,11 +172,11 @@
 }
 
 .customers_sent_offer {
-    color: #ff3ae8;
+    color: #28D9F1;
 }
 
 .customers_invoice_sent {
-    color: #ff3ae8;
+    color: #58CA12;
 }
 
 .customers_closed_won {
