--- a/src/Components/FormUserLogin/FormUserLogin.module.scss
+++ b/src/Components/FormUserLogin/FormUserLogin.module.scss
@@ -81,7 +81,7 @@
 
     &__messageErrorEnterRequiredFields {
         position: absolute;
-        top: -150px;
+        bottom: 50px;
         display: inline-block;
         max-width: 221px;
         padding: 9px 20px;
@@ -92,6 +92,11 @@
         font-size: 12px;
         line-height: 16px;
         color: #fff;
+
+        @media (max-width: 600px) {
+            top: -60px;
+            bottom: initial;
+        }
     }
 
     &__signature {
@@ -103,6 +108,10 @@
         font-size: 14px;
         line-height: 17px;
         color: #8B8B9E;
+
+        @media (max-width: 600px) {
+            margin-top: 50px;
+        }
 
         a {
             color: #8B8B9E;
