--- a/src/Components/Input/Input.module.scss
+++ b/src/Components/Input/Input.module.scss
@@ -17,6 +17,9 @@
         align-items: center;
         font-size: 14px;
         color: #8B8B9E;
+        font-family: 'FuturaPT';
+        font-weight: 400;
+        font-size: 14px;
     }
 
     &::-webkit-outer-spin-button,
