--- a/src/Components/MainPage/MainPage.module.scss
+++ b/src/Components/MainPage/MainPage.module.scss
@@ -189,6 +189,10 @@
 
         a {
             color: #E0E0E0;
+            font-family: 'FuturaPT';
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 19px;
         }
     }
 }
