work edits registration

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -45,7 +45,7 @@
 .sizeCode {
     font-size: 12px;
     line-height: 15px;
-    letter-spacing: 0.08em;
+    letter-spacing: 0.96px;
     color: #E0E0E0;
 }
 
