--- a/src/Components/DefaultPage/DefaultPage.module.scss
+++ b/src/Components/DefaultPage/DefaultPage.module.scss
@@ -30,7 +30,8 @@
         max-width: 100%;
     }
 
-    &__contactInformation {
+    &__contactInformation,
+    &__mail {
         margin-top: 40px;
         font-family: 'FuturaPT';
         font-weight: 400;
@@ -38,7 +39,7 @@
         font-size: 14px;
         line-height: 148%;
         text-align: center;
-        max-width: 315px;
+        max-width: 300px;
         color: #8B8B9E;
 
         a {
@@ -62,4 +63,9 @@
 .bgColorArrow {
     background-color: #CE1A30;
     border: 2px solid #CE1A30;
+}
+
+.code {
+    font-size: 18px;
+    letter-spacing: 1.44px;
 }
