--- a/src/Components/FormUserLogin/FormUserLogin.module.scss
+++ b/src/Components/FormUserLogin/FormUserLogin.module.scss
@@ -70,6 +70,83 @@
         }
     }
 
+    .customReactTelInput {
+        color: #8B8B9E;
+        font-family: 'FuturaPT';
+        font-weight: 400;
+        background-color: transparent !important;
+        border: none !important;
+        height: initial !important;
+        line-height: initial !important;
+        padding-left: 10px !important;
+    }
+
+    .flagDropdown {
+        background-color: transparent !important;
+        border: none !important;
+
+        &:hover {
+            div {
+                background-color: transparent !important;
+            }
+        }
+
+        div+ul li {
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            background-color: #262830 !important;
+            box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, .04);
+            color: #e0e0e0;
+            cursor: pointer;
+            display: flex;
+            font-family: FuturaPT;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 20px;
+            padding: 6px 20px;
+            transition: background-color .2s ease;
+
+            &:hover {
+                background-color: #323540 !important;
+            }
+
+            span {
+                font-family: 'FuturaPT';
+                font-weight: 400;
+            }
+        }
+
+        div+ul {
+            width: 340px;
+            margin-top: 2px;
+            border-radius: 0 0 16px 16px;
+            border: 2px solid #323540;
+            border-top: none;
+            background: #323540;
+
+            &::-webkit-scrollbar-thumb {
+                background-color: #4F525C;
+                border-radius: 8px 8px;
+            }
+
+            &::-webkit-scrollbar {
+                width: 6px;
+                height: 8px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background-color: #8B8B9E;
+                border-radius: 3px;
+            }
+        }
+    }
+
+    .flagDropdown div {
+        background-color: transparent !important;
+        padding-left: 0;
+    }
+
     &__toggleTypeInput {
         position: absolute;
         right: 23px;
@@ -86,7 +163,7 @@
         position: absolute;
         bottom: 60px;
         display: inline-block;
-        max-width: 221px;
+        max-width: 240px;
         padding: 9px 20px;
         background-color: #C40F24;
         border-radius: 12px;
